--- a/RandomMealGenerator/src/styles.scss
+++ b/RandomMealGenerator/src/styles.scss
@@ -1,4 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+$height: 100%;
+$color: #33c3f3;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html {
+  height: $height;
+}
+
+body {
+  height: $height;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+  background-color: $color;
+}
