--- a/RandomMealGenerator/src/app/recipe/recipe.component.css
+++ b/RandomMealGenerator/src/app/recipe/recipe.component.css
@@ -1,6 +1,5 @@
-.card {
-  max-width: 90%;
-}
-.card .header .btn-random-meal .img-burger {
-  width: 10px;
+.list-item {
+  text-align: left;
+  display: inline-block;
+  height: 100%;
 }
